Bug 257313 - [WGSL] wgslc should report an error when can't open input file
Summary: [WGSL] wgslc should report an error when can't open input file
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-25 01:12 PDT by Tadeu Zagallo
Modified: 2023-05-25 23:54 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-05-25 01:12:24 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-05-25 01:12:40 PDT
<rdar://problem/109820248>
Comment 2 Tadeu Zagallo 2023-05-25 01:15:39 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14336
Comment 3 EWS 2023-05-25 23:54:32 PDT
Committed 264562@main (c88eea5cf7d9): <https://commits.webkit.org/264562@main>

Reviewed commits have been landed. Closing PR #14336 and removing active labels.