[WGSL] wgslc should report an error when can't open input file https://bugs.webkit.org/show_bug.cgi?id=257313 rdar://109820248

Reviewed by Mike Wyrzykowski.

* Source/WebGPU/WGSL/wgslc.cpp:
(runWGSL):

Canonical link: https://commits.webkit.org/264562@main