Source/WebGPU/WGSL/wgslc.cpp
@@ -109,7 +109,7 @@ static int runWGSL(const CommandLine& options)
     String fileName = String::fromLatin1(options.file());
     auto readResult = FileSystem::readEntireFile(fileName);
     if (!readResult.has_value()) {
-        // FIXME: print error message
+        dataLogLn("Failed to open ", fileName);
         return EXIT_FAILURE;
     }
 
